[project]
name = "simple_knn"
version = "0.1.0"
description = "A simple-knn (k nearest neighbors) implementation that uses torch and supports Apple Silicon"
authors = [
    {name = "ERIC KLINKHAMMER",email = "eklinkhammer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
flake8 = "^7.1.1"
pre-commit = "^4.1.0"
mypy = "^1.15.0"
isort = "^6.0.0"
ruff = "^0.9.6"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"
line_length = 88


